# supasuge.com

./: .gitignore  DEPLOYMENT.md  PRODUCTION_READY.md  README.md  out
app/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOYMENT_FIX.md  Dockerfile  README.md  app.py  config.py  content_archive.py  content_indexer.py  content_sync.py  database.py  deploy.sh  docker-compose.yml  entrypoint.sh  extensions.py  gunicorn.conf.py  logs1.txt  models.py  pyproject.toml  reload.sh  requirements.txt  sanity.sh  security.py  startup.py
app/auth/: README.md  __init__.py  decorators.py  ssh_auth.py
app/blueprints/: __init__.py  health.py  media.py  public.py
app/blueprints/admin/: __init__.py  analytics.py  auth.py  categories.py  posts.py  tags.py
app/blueprints/api/: __init__.py  posts.py  tracking.py
app/content/articles/cheatsheets/: dd.md  gpg.md  iptables-cheatsheet  x86-opcodes-operands-core-instructions.md
app/content/articles/cryptography/: rsa.md
app/content/articles/ctf/: Cert-p0lyglots2024ctf.md  Challenge Writeup - Smelter (Crypto, TamuCTF 24').md  CoCoracle-Writeup-GrizzHacks8.md  Expectimax-or-die-trying.md  N00BzCTF-Broadcast-writeup.md  PatriotCTF-Impersonate-Writeup.md  R-stands-alone-nitectf24.md  crypto-on-the-rocks.md  (+7 more)
app/keys/: admin_ssh.pub
app/nginx/: dhparam.pem  nginx.conf
app/nginx/conf.d/: site.conf
app/nginx/templates/: site.http.conf.template  site.https.conf.template  site.local.conf.template
app/public/: robots.txt  security.txt  sitemap.xml
app/scripts/: build_sitemap.py  deploy-production.sh  deploy.sh  gensecrets.sh  install-docker.sh  new_post.py  obtain-certs.sh  oops.sh  policy.py  renew-certs.sh  setup_env.sh  sitectl.sh  sync.py  transfer-tar.sh
app/services/: __init__.py  analytics_service.py  markdown_ingest.py  post_service.py  tag_service.py  upload_service.py
app/static/: site.css  site.css.backup  site.css.backup2
app/static/css/: admin.css
app/static/img/: test.txt
app/static/js/: analytics.js  lattice-bg.js  tag-picker.js
app/templates/: 404.html  500.html  about.html  all_posts.html  article.html  articles_index.html  base.html  categories.html  category.html  contact.html  error.html  index.html  post.html  privacy.html  projects.html  projects_index.html  tag.html  tags.html  terms.html
app/templates/admin/: base_admin.html  categories_list.html  dashboard.html  login.html  post_edit.html  post_new.html  posts_list.html  tags_list.html
app/tests/: conftest.py  test_api.py  test_content_archive.py  test_content_indexer.py  test_content_sync.py  test_post_service.py  test_post_service_db_only.py  test_public_routes.py  test_security.py  test_ssh_auth.py  test_upload_service.py
(+19 files in other folders)
